--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "masbug/flysystem-google-drive-ext": "^1.1",
+        "nao-pon/flysystem-google-drive": "^1.1",
         "niro/uploads": "dev-master"
     },
     "require-dev": {
