--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "masbug/flysystem-google-drive-ext": "^1.1",
+        "minishlink/web-push": "^6.0",
         "nao-pon/flysystem-google-drive": "^1.1",
         "niro/uploads": "dev-master"
     },
